--- a/DS_recommender_exercise_A.ipynb
+++ b/DS_recommender_exercise_A.ipynb
@@ -158,21 +158,12 @@
     "editable": true
    },
    "source": [
-    "I implemented two solutions in Haskell, a simpler one based on a k Nearest Neighbors approach using Jaccard distance, and a more involved low-rank matrix factorization (MF) approach based on the method of Hu, Koren, and Volinsky [Collaborative Filtering for Implicit Feedback Datasets](http://yifanhu.net/PUB/cf.pdf). The code is documented and tested, and can be found in the included project. The `test` folder is a good place to start..\n",
+    "I implemented two solutions in Haskell, a simpler one based on a k Nearest Neighbors approach using Jaccard distance, and a more involved low-rank matrix factorization (MF) approach based on the method of Hu, Koren, and Volinsky in [Collaborative Filtering for Implicit Feedback Datasets](http://yifanhu.net/PUB/cf.pdf). The code is separately documented, and can be found in the included project (the `test` folder is a good place to start). I feel that Haskell promotes reproducible results and resuable code better than Python, and this is the sort of development I would like to do at Takt.\n",
     "\n",
-    "I am also providing a Python solution (below) in order to walk through my process in notebook form. This solution again uses the method of Hu, Koren, and Volinsky. The main difference between the Haskell and Python MF solution is that I wrote the Haskell one from scratch using a stochastic gradient descent (SGD) optimizer, and the Python one uses a library. \n",
+    "However you have provided me with a notebook, so I am also includong a more typical data scientist solution (below) in order to walk through my process using Python. This solution again uses the MF method of Hu, Koren, and Volinsky. The main difference between the Haskell and Python solutions is that I wrote the Haskell one from scratch using a stochastic gradient descent (SGD) optimizer, and the Python one uses the alternating least squares (ALS) solver in Ben Frederickson's [implicit](https://github.com/benfred/implicit) library.\n",
     "\n",
     "The `data` folder contains the recommedation files for all three solutions (`data/recommend_1-KNN.csv`, `data/recommend_1-SGD.csv` and `data/recommend_1-ALS.csv`). "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
