--- a/DS_recommender_exercise_A.ipynb
+++ b/DS_recommender_exercise_A.ipynb
@@ -193,39 +193,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 225,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "24381\n",
-      "300\n",
-      "132638\n"
-     ]
-    }
-   ],
-   "source": [
-    "customers = list(np.sort(grouped_purchased.CustomerID.unique())) # Get our unique customers\n",
-    "products = list(grouped_purchased.StockCode.unique()) # Get our unique products that were purchased\n",
-    "quantity = list(grouped_purchased.Quantity) # All of our purchases\n",
-    "\n",
-    "print len(customers)\n",
-    "print len(products)\n",
-    "print len(quantity)\n",
-    "\n",
-    "rows = grouped_purchased.CustomerID.astype('category', categories = customers).cat.codes \n",
-    "# Get the associated row indices\n",
-    "cols = grouped_purchased.StockCode.astype('category', categories = products).cat.codes \n",
-    "# Get the associated column indices\n",
-    "purchases_sparse = sparse.csr_matrix((quantity, (rows, cols)), shape=(len(customers), len(products)))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "deletable": true,
@@ -1155,7 +1122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 254,
    "metadata": {
     "collapsed": false
    },
@@ -1170,7 +1137,7 @@
    ],
    "source": [
     "### The following is used to validate your submission format\n",
-    "FILE_NAME = \"/Users/cem3394/Documents/code/haskell/recommenders/alternate/data/recommend_1-KNN.csv\" # Put your filename here\n",
+    "FILE_NAME = \"/Users/cem3394/Documents/code/haskell/recommenders/alternate/data/recommend_1-ALS.csv\" # Put your filename here\n",
     "\n",
     "submission_file = open(FILE_NAME)\n",
     "header = submission_file.readline()\n",
@@ -1199,6 +1166,33 @@
     "\n",
     "print(\"Your submission file has passed the format check!\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
