--- a/DS_recommender_exercise_A.ipynb
+++ b/DS_recommender_exercise_A.ipynb
@@ -158,9 +158,9 @@
     "editable": true
    },
    "source": [
-    "I implemented two solutions in Haskell, a simpler one based on a k Nearest Neighbors approach using Jaccard distance, and a more involved low-rank matrix factorization (MF) approach based on the method of Hu, Koren, and Volinsky in [Collaborative Filtering for Implicit Feedback Datasets](http://yifanhu.net/PUB/cf.pdf). The code is separately documented, and can be found in the included project. I feel that Haskell promotes reproducible results and resuable code, and this is the sort of development I would like to do at Takt.\n",
+    "I implemented two solutions in Haskell, a simpler one based on a k Nearest Neighbors approach using Jaccard distance, and a more involved low-rank matrix factorization (MF) approach based on the method of Hu, Koren, and Volinsky in [Collaborative Filtering for Implicit Feedback Datasets](http://yifanhu.net/PUB/cf.pdf). The code is separately documented, and can be found in the included project (the `test` directory is a good place to start). It represents my submission in terms of showcasing formal development skills / coding style best practices.\n",
     "\n",
-    "However you have provided me with a notebook, so I am also including a more typical 'data scientist'-style solution (below) in order to walk through my process using Python. This solution also uses the MF method of Hu, Koren, and Volinsky. The main difference between the Haskell and Python solutions is that I wrote the Haskell one from scratch using a general purpose stochastic gradient descent (SGD) optimizer, and the Python one uses the alternating least squares (ALS) solver in Ben Frederickson's [implicit](https://github.com/benfred/implicit) library. ALS is a second-order method (as opposed to GSD) and Ben's code is parallelized, so this notebook was quite a bit faster than my Haskell version. Otherwise the two methods yielded similar results. \n",
+    "However a stack project is not the ideal format for documenting a thought process, and you have provided me with a juptyer notebook with Python code in it, so I am also including a more typical 'data scientist'-style solution (below) in order to walk through my process using Python. This solution also uses the MF method of Hu, Koren, and Volinsky. The main difference between the Haskell and Python solutions is that I wrote the Haskell one from scratch using a general purpose stochastic gradient descent (SGD) optimizer, and the Python one uses the alternating least squares (ALS) solver in Ben Frederickson's [implicit](https://github.com/benfred/implicit) library. ALS is a second-order method (as opposed to GSD) and Ben's code is parallelized, so this notebook was quite a bit faster than my Haskell version. Otherwise the two methods yielded similar results. \n",
     "\n",
     "The `data` folder contains the recommedation files for all three solutions (`data/recommend_1-KNN.csv`, `data/recommend_1-SGD.csv` and `data/recommend_1-ALS.csv`). "
    ]
@@ -1121,7 +1121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 257,
    "metadata": {
     "collapsed": false
    },
@@ -1165,6 +1165,33 @@
     "\n",
     "print(\"Your submission file has passed the format check!\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
