--- a/DS_recommender_exercise_A.ipynb
+++ b/DS_recommender_exercise_A.ipynb
@@ -2,7 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# Data science candidate exercise\n",
     "\n",
@@ -28,7 +31,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# Problem Statement\n",
     "\n",
@@ -158,11 +164,11 @@
     "editable": true
    },
    "source": [
-    "I implemented two solutions in Haskell, a simpler one based on a k Nearest Neighbors approach using Jaccard distance, and a more involved low-rank matrix factorization (MF) approach based on the method of Hu, Koren, and Volinsky in [Collaborative Filtering for Implicit Feedback Datasets](http://yifanhu.net/PUB/cf.pdf). The code is separately documented, and can be found in the included project (the `test` directory is a good place to start). It represents my submission in terms of showcasing formal development skills / coding style best practices.\n",
+    "I implemented two solutions in Haskell, a simpler one based on a k Nearest Neighbors approach using Jaccard distance, and a more involved low-rank matrix factorization (MF) approach based on the method of Hu, Koren, and Volinsky in [Collaborative Filtering for Implicit Feedback Datasets](http://yifanhu.net/PUB/cf.pdf) (there is also an excellent exposition by the Activision data science team [here](http://activisiongamescience.github.io/2016/01/11/Implicit-Recommender-Systems-Biased-Matrix-Factorization)). The code can be found in the included project (the `test` directory is a good place to start). It represents my submission in terms of showcasing formal development skills / coding style best practices.\n",
     "\n",
-    "However a stack project is not the ideal format for documenting a thought process, and you have provided me with a juptyer notebook with Python code in it, so I am also including a more typical 'data scientist'-style solution (below) in order to walk through my process using Python. This solution also uses the MF method of Hu, Koren, and Volinsky. The main difference between the Haskell and Python solutions is that I wrote the Haskell one from scratch using a general purpose stochastic gradient descent (SGD) optimizer, and the Python one uses the alternating least squares (ALS) solver in Ben Frederickson's [implicit](https://github.com/benfred/implicit) library. ALS is a second-order method (as opposed to GSD) and Ben's code is parallelized, so this notebook was quite a bit faster than my Haskell version. Otherwise the two methods yielded similar results. \n",
+    "However a stack project is not the ideal format for documenting a thought process, and you have provided me with a juptyer notebook with Python code in it, so I am also including a more typical 'data scientist'-style solution (below) in order to walk through my process using Python. This solution also uses the MF method of Hu, Koren, and Volinsky. The main difference between the Haskell and Python solutions is that I wrote the Haskell one from scratch using a general purpose stochastic gradient descent (SGD) optimizer, and the Python one uses the alternating least squares (ALS) solver in Ben Frederickson's implicit library. ALS is a second-order method (as opposed to GSD) and Ben's code is parallelized, so this notebook was quite a bit faster than my Haskell version. Otherwise the two methods yielded similar results.\n",
     "\n",
-    "The `data` folder contains the recommedation files for all three solutions (`data/recommend_1-KNN.csv`, `data/recommend_1-SGD.csv` and `data/recommend_1-ALS.csv`). "
+    "The `data` folder contains the recommedation files for all three solutions (`data/recommend_1-KNN.csv`, `data/recommend_1-SGD.csv` and `data/recommend_1-ALS.csv`)."
    ]
   },
   {
@@ -206,7 +212,9 @@
    "cell_type": "code",
    "execution_count": 250,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -324,42 +332,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "deletable": true,
@@ -445,7 +417,9 @@
    "cell_type": "code",
    "execution_count": 115,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -762,7 +736,9 @@
    "cell_type": "code",
    "execution_count": 93,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -799,7 +775,7 @@
    "source": [
     "A commonly used metric for evaluating binary classifiers is AUC, which is the area under the [Receiver Operating Characteristic](https://en.wikipedia.org/wiki/Receiver_operating_characteristic) (or ROC) curve. A greater area under the curve essentially means users are purchasing items we recommend more frequently. \n",
     "\n",
-    "Usually AUC is used in more typical binary classification problems to identify how well a model can predict a positive example vs. a negative one. It is also well-suited to our purposes of ranking recommendations, though one could use an [F1 score](https://en.wikipedia.org/wiki/F1_score), or something much simpler like [click through rate](https://en.wikipedia.org/wiki/Click-through_rate). I used CTR scores to get baseline assessments for the two models I wrote in Haskell (see the `score` function in `Main.hs`), mainly because it's easier to implement.\n",
+    "Usually AUC is used in more typical binary classification problems to identify how well a model can predict a positive example vs. a negative one. It is also well-suited to our purposes of ranking recommendations, though one could use an [F1 score](https://en.wikipedia.org/wiki/F1_score), or something much simpler like [click through rate](https://en.wikipedia.org/wiki/Click-through_rate). I used CTR scores to get baseline assessments for the two models I wrote in Haskell (see the `score` function in `test/Exec.hs`), mainly because it's easier to implement.\n",
     "\n",
     "So, to compute AUC we need to write a function that can calculate a mean area under the curve (AUC) for any user that had at least one masked item. As a benchmark, we will also calculate what the mean AUC would have been if we had simply recommended the most popular items. Popularity tends to be hard to beat in most recommender system problems, so it makes a good comparison. \n",
     "\n",
@@ -927,7 +903,9 @@
    "cell_type": "code",
    "execution_count": 236,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -956,15 +934,6 @@
    "source": [
     "We can see that our recommender system beat popularity by a small amount. Our system had a mean AUC of 0.693, while the popular item benchmark had a lower AUC of 0.675. As the system scales (especially as more products are added) I would expect the MF version to continue to improve. "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 116,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1067,7 +1036,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Finally, we write our recommendations out to csv:"
    ]
@@ -1076,7 +1048,9 @@
    "cell_type": "code",
    "execution_count": 195,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -1089,7 +1063,9 @@
    "cell_type": "code",
    "execution_count": 239,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -1121,9 +1097,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 254,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -1170,7 +1148,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
@@ -1179,7 +1159,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
@@ -1188,7 +1170,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
@@ -1197,34 +1181,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
